k8s/apps/accounting/binner/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: binner
  namespace: binner
  labels:
    app.kubernetes.io/name: binner
    app.kubernetes.io/instance: binner
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: binner
      app.kubernetes.io/instance: binner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: binner
        app.kubernetes.io/instance: binner
    spec:
      securityContext:
        fsGroup: 1654
      containers:
        - name: binner
          image: docker.io/binnerofficial/binner:v2.6.21
          volumeMounts:
            - name: uploads
              mountPath: /userfiles
            - name: pg-certs
              mountPath: /pg-certs
          ports:
            - name: http
              protocol: TCP
              containerPort: 8090
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: binner-uploads
        - name: pg-certs
          secret:
            secretName: binner-pg-ca
