k8s/apps/accounting/binner/ingress.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: binner
  namespace: binner
  labels:
    app.kubernetes.io/name: binner
    app.kubernetes.io/instance: binner
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: binner
    app.kubernetes.io/instance: binner
  ports:
    - name: http
      port: 8090
      targetPort: http
      protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: binner
  namespace: binner
  labels:
    app.kubernetes.io/name: binner
    app.kubernetes.io/instance: binner
  annotations:
    kubernetes.io/ingress.class: ingress-external-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`binner.${CLUSTER_DOMAIN}`)
      services:
        - name: binner
          namespace: binner
          port: http
